# hasql

./: .gitignore  .travis.yml  CHANGELOG.md  Example.hs  README.md  Setup.hs  bench  bench-with-tons-of-memory  cabal.project  flake.nix  hasql.cabal  high-sql.cabal  profile-events  profile-gc  profile-ghc-events-analyze  profile-heap  profile-performance  profile-report  profile-threads  profile-threadscope  stack.yaml  test
.github/: copilot-instructions.md
.github/workflows/: build-and-test.yaml  check.yaml  deploy-docs-to-pages.yaml  format-and-test.yaml  format.yaml  on-pr.yaml  on-pull-request-to-master.yaml  on-pull-request.yaml  on-push-to-master-or-pr.yaml  on-push-to-master.yaml  on-push-to-release.yaml  release.yaml  test.yaml
benchmark/: Main.hs
benchmark/Main/: Prelude.hs  Queries.hs
benchmarks/: Main.hs
demo/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.12.2/: hasql-1.9.1.2-inplace-testing-kit.conf  hasql-1.9.1.2-inplace.conf  hasql-1.9.3.1-inplace-testing-kit.conf  hasql-1.9.3.1-inplace.conf  package.cache
dist-newstyle/tmp/src-26291/template-haskell-compat-v0208-0.1.9.5/: template-haskell-compat-v0208.cabal
dist-newstyle/tmp/src-26293/tasty-quickcheck-0.11.1/: tasty-quickcheck.cabal
doctest/: Main.hs
hspec/: Main.hs
hspec-postgres/: Main.hs
hspec/Hasql/: ConcurrencySpec.hs  ConnectionSpec.hs  DecoderCompatibilitySpec.hs  EncodingDecodingSpec.hs  MiscSpec.hs  PipelineSpec.hs  SessionSpec.hs  StatementSpec.hs
integration-tests/Hasql/: ConcurrencySpec.hs  EncodingDecodingSpec.hs  MiscSpec.hs  PipelineSpec.hs  StatementSpec.hs
postgres-tests/: Main.hs
profiling/: Main.hs
sandbox/: Main.hs
src/benchmarks/: Main.hs
src/codecs/Codecs/: ArrayDecoder.hs  ArrayEncoder.hs  CompositeDecoder.hs  Decoders.hs  Encoders.hs  ParamsEncoder.hs  PostgresTypeInfo.hs  RequestingOid.hs  TypeInfo.hs  ValueDecoder.hs  ValueEncoder.hs
src/codecs/Codecs/Decoders/: Array.hs  Composite.hs  NullableOrNot.hs  Value.hs
src/codecs/Codecs/Encoders/: Array.hs  Composite.hs  NullableOrNot.hs  Params.hs  Value.hs
src/comms-tests/: SpecHook.hs
src/comms-tests/Comms/Session/: CleanUpAfterInterruptionSpec.hs
src/comms-tests/Hasql/Comms/: SpecHook.hs
src/comms/Comms/: Recv.hs  ResultDecoder.hs  Roundtrip.hs  RowDecoder.hs  RowReader.hs  Send.hs  Session.hs
src/connection-string/: ConnectionString.hs
src/connection-string-tests/: Main.hs
src/connection-string/ConnectionString/: Parsers.hs  Types.hs
src/connection-string/ConnectionString/Types/: Gens.hs
src/core/Core/: Errors.hs  Location.hs  PostgresTypeInfo.hs  SessionError.hs  UsageError.hs
src/core/Core/Contexts/: ArrayDecoder.hs  ArrayEncoder.hs  Command.hs  CompositeDecoder.hs  OIDLookup.hs  ParamsEncoder.hs  Pipeline.hs  Recv.hs  ResultConsumer.hs  ResultDecoder.hs  ResultsDecoder.hs  Roundtrip.hs  RowDecoder.hs  Send.hs  SendAndRecv.hs  Session.hs  ValueDecoder.hs  ValueEncoder.hs
src/core/Core/Decoders/: Result.hs  Row.hs
src/core/Core/PqProcedures/: SelectTypeInfo.hs
src/core/Core/Structures/: ConnectionState.hs  OIDCache.hs  OidCache.hs  StatementCache.hs
src/driver-interface/Hasql/Driver/: Interface.hs
src/engine/Engine/: Errors.hs
src/engine/Engine/Contexts/: Pipeline.hs  Session.hs
src/engine/Engine/Decoders/: Result.hs  Row.hs
src/engine/Engine/PqProcedures/: SelectTypeInfo.hs
src/engine/Engine/Structures/: ConnectionState.hs  OidCache.hs  StatementCache.hs
src/hipq-tests/: SpecHook.hs
src/hipq-tests/Hipq/Session/: CleanUpAfterInterruptionSpec.hs
src/hipq-tests/Sharing/: SpecHook.hs
src/hipq/Hipq/: Recv.hs  ResultDecoder.hs  ResultRowDecoder.hs  ResultRowMapping.hs  Roundtrip.hs  RowDecoder.hs  RowReader.hs  Send.hs  Session.hs  ValueDecoder.hs
src/integration-tests/: ConcurrencySpec.hs  ConnectionSpec.hs  DecoderCompatibilityCheckSpec.hs  EncodingDecodingSpec.hs  MiscSpec.hs  PipelineSpec.hs  SessionSpec.hs  StatementSpec.hs
src/integration-tests/Bugs/: PipelineAbortSpec.hs  PreparedStatementAlreadyExistsSpec.hs
src/integration-tests/Features/: CodecsSpec.hs  ComprehensiveErrorsSpec.hs  ConcurrencySpec.hs  ConnectionSpec.hs  DecoderCompatibilityCheckSpec.hs  ErrorGeneratorsSpec.hs  ErrorsSpec.hs  PipelineSpec.hs  ServerVersionCompatibilitySpec.hs  SessionSpec.hs  StatementSpec.hs  SyntaxErrorsSpec.hs
src/integration-tests/Functionality/Connection/: AcquireSpec.hs
src/integration-tests/Hasql/: ConcurrencySpec.hs  DecoderCompatibilityCheckSpec.hs  EncodingDecodingSpec.hs  MiscSpec.hs  PipelineSpec.hs  SessionSpec.hs  StatementSpec.hs
src/integration-tests/Helpers/: NewStatements.hs  Scripts.hs  Statements.hs
src/integration-tests/Regressions/: PipelineAbortSpec.hs  PreparedStatementAlreadyExistsSpec.hs
src/integration-tests/Sharing/: SpecHook.hs
src/libpq/: Libpq.hs
src/libpq-driver/Hasql/: LibpqDriver.hs
src/libpq/Libpq/: Ffi.hs  Mappings.hsc  Prelude.hs
src/library-tests/Helpers/: Scripts.hs  Statements.hs
src/library-tests/Sharing/: SpecHook.hs
src/percent-encoding/: PercentEncoding.hs
src/percent-encoding/PercentEncoding/: AttoparsecParsers.hs  Charsets.hs  MonadPlus.hs  Parsers.hs  TextBuilders.hs  Utf8CharView.hs
src/platform/Platform/: LookingUp.hs  Prelude.hs
src/pq/: Pq.hs
src/pq/Pq/: Ffi.hs  Mappings.hsc
src/profiling/: Main.hs
src/testcontainers-postgresql/: TestcontainersPostgresql.hs
src/testing-kit/TestingKit/: Constants.hs  Testcontainers.hs  TestingDsl.hs
src/text-builder-extras/: TextBuilderExtras.hs
src/text-extras/: TextExtras.hs
tasty/: Main.hs
tasty/Main/: Connection.hs  DSL.hs  OidCacheTest.hs  Prelude.hs  Queries.hs  SimpleOidTest.hs  Statements.hs  TestcontainersConnection.hs
testing-kit/Hasql/TestingKit/: Constants.hs  Testcontainers.hs  TestcontainersHelpers.hs  TestingDsl.hs
testing-utils/Hasql/TestingUtils/: Constants.hs  Session.hs  TestingDsl.hs
tests/: ConnectedTests.hs  Main.hs
threads-test/: Main.hs
threads-test/Main/: Queries.hs  Statements.hs
(+134 files in other folders)
