cabal-version: 3.0
name: hasql
version: 1.9.3.1
category: Hasql, Database, PostgreSQL
synopsis: Fast PostgreSQL driver with a flexible mapping API
description:
  Root of the \"hasql\" ecosystem.
  This library provides connection management, execution of queries and mapping of parameters and results.
  Extended functionality such as pooling, transactions and compile-time checking is provided by extension libraries.
  For more details and tutorials see <https://github.com/nikita-volkov/hasql the readme>.

  The API comes free from all kinds of exceptions.
  All error-reporting is explicit and is presented using the 'Either' type.

  \"hasql\" requires you to have the "\libpq\" C-library installed to compile.
  Starting from version 1.7 of \"hasql\" it requires \"libpq\" of at least version 14.
  \"libpq\" comes distributed with PostgreSQL,
  so typically all you need is just to install the latest PostgreSQL distro.

  Despite the mentioned requirements for \"libpq\" \"hasql\" is compatible
  with a wide range of PostgreSQL servers with tests having been conducted starting from
  version 8.3.

homepage: https://github.com/nikita-volkov/hasql
bug-reports: https://github.com/nikita-volkov/hasql/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2014, Nikita Volkov
license: MIT
license-file: LICENSE
extra-source-files:
  README.md

extra-doc-files:
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/nikita-volkov/hasql

common base
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    Arrows
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    -with-rtsopts=-N
    -rtsopts
    -funbox-strict-fields

common test
  import: base
  ghc-options:
    -threaded
    -with-rtsopts=-N

library
  import: base
  hs-source-dirs: src/library
  exposed-modules:
    Hasql.Connection
    Hasql.Connection.Setting
    Hasql.Connection.Setting.Connection
    Hasql.Connection.Setting.Connection.Param
    Hasql.Decoders
    Hasql.Encoders
    Hasql.Pipeline
    Hasql.Session
    Hasql.Statement

  other-modules:
    Hasql.Connection.Config
    Hasql.Connection.Config.ConnectionString
    Hasql.Connection.Config.ConnectionString.Params
    Hasql.Connection.PqProcedures

  build-depends:
    aeson >=2 && <3,
    bytestring >=0.10 && <0.13,
    containers >=0.6 && <0.9,
    hasql:core,
    hasql:platform,
    hasql:pq,
    iproute >=1.7 && <1.8,
    postgresql-binary >=0.14.2 && <0.15,
    text >=1 && <3,
    text-builder >=1 && <1.1,
    vector >=0.10 && <0.14,

library core
  import: base
  hs-source-dirs: src/core
  exposed-modules:
    Core.Contexts.ArrayDecoder
    Core.Contexts.ArrayEncoder
    Core.Contexts.Command
    Core.Contexts.CompositeDecoder
    Core.Contexts.ParamsEncoder
    Core.Contexts.Pipeline
    Core.Contexts.ResultConsumer
    Core.Contexts.ResultDecoder
    Core.Contexts.ResultsDecoder
    Core.Contexts.Roundtrip
    Core.Contexts.RowDecoder
    Core.Contexts.RowDecoder.RowDecoder
    Core.Contexts.Session
    Core.Contexts.ValueDecoder
    Core.Contexts.ValueEncoder
    Core.Errors
    Core.PostgresTypeInfo
    Core.Structures.ConnectionState
    Core.Structures.StatementCache

  other-modules:
  build-depends:
    attoparsec >=0.10 && <0.15,
    bytestring >=0.10 && <0.13,
    bytestring-strict-builder >=0.4.5.1 && <0.5,
    hasql:platform,
    hasql:pq,
    postgresql-binary >=0.14.2 && <0.15,
    text-builder >=1 && <1.1,
    unordered-containers >=0.2 && <0.3,
    vector >=0.10 && <0.14,

-- Replacement of the "base" library for all the sublibs here.
-- Covers such things as Prelude and shared utils.
library platform
  import: base
  hs-source-dirs: src/platform
  exposed-modules:
    Platform.Prelude

  build-depends:
    base >=4.14 && <5,
    bytestring >=0.10 && <0.13,
    contravariant >=1.3 && <2,
    dlist >=0.8 && <0.9 || >=1 && <2,
    hashable >=1.2 && <2,
    mtl >=2 && <3,
    profunctors >=5.1 && <6,
    scientific >=0.3 && <0.4,
    text >=1 && <3,
    time >=1.9 && <2,
    transformers >=0.6 && <0.7,
    uuid >=1.3 && <2,
    vector >=0.10 && <0.14,
    witherable >=0.5 && <0.6,

library pq
  import: base
  hs-source-dirs: src/pq
  exposed-modules:
    Pq

  other-modules:
    Pq.Ffi
    Pq.Mappings

  build-depends:
    base >=4.14 && <5,
    hasql:platform,
    postgresql-libpq >=0.10.1 && <0.12,

library testing-kit
  import: base
  visibility: private
  hs-source-dirs: src/testing-kit
  exposed-modules:
    TestingKit.Constants
    TestingKit.Preludes.Base
    TestingKit.Statements.BrokenSyntax
    TestingKit.Statements.GenerateSeries
    TestingKit.Statements.WrongDecoder
    TestingKit.Testcontainers
    TestingKit.TestingDsl

  build-depends:
    base >=4.14 && <5,
    bytestring >=0.10 && <0.13,
    hasql,
    testcontainers-postgresql >=0.0.1 && <0.1,
    transformers >=0.6 && <0.7,
    uuid >=1.3 && <2,

benchmark benchmarks
  import: executable
  type: exitcode-stdio-1.0
  hs-source-dirs: src/benchmarks
  main-is: Main.hs
  build-depends:
    criterion >=1.6 && <2,
    hasql,
    rerebase <2,

test-suite profiling
  import: base
  type: exitcode-stdio-1.0
  hs-source-dirs: src/profiling
  main-is: Main.hs
  ghc-options:
    -O2
    -threaded
    -rtsopts

  build-depends:
    hasql,
    hasql:testing-kit,
    rerebase >=1 && <2,

test-suite integration-tests
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/integration-tests
  main-is: Main.hs
  other-modules:
    ConcurrencySpec
    ConnectionSpec
    EncodingDecodingSpec
    Features.DecoderCompatibilityCheckSpec
    MiscSpec
    PipelineSpec
    SessionSpec
    StatementSpec

  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    QuickCheck,
    contravariant-extras >=0.3.5.2 && <0.4,
    hasql,
    hasql:testing-kit,
    hspec,
    quickcheck-instances >=0.3.11 && <0.4,
    rerebase >=1 && <2,
    testcontainers-postgresql >=0.0.1 && <0.1,
