cabal-version: 3.0
name: hasql
version: 1.9.3.2
category: Hasql, Database, PostgreSQL
synopsis: Fast PostgreSQL driver with a flexible mapping API
description:
  Root of the \"hasql\" ecosystem.
  This library provides connection management, execution of queries and mapping of parameters and results.
  Extended functionality such as pooling, transactions and compile-time checking is provided by extension libraries.
  For more details and tutorials see <https://github.com/nikita-volkov/hasql the readme>.

  The API comes free from all kinds of exceptions.
  All error-reporting is explicit and is presented using the 'Either' type.

  \"hasql\" requires you to have the "\libpq\" C-library installed to compile.
  Starting from version 1.7 of \"hasql\" it requires \"libpq\" of at least version 14.
  \"libpq\" comes distributed with PostgreSQL,
  so typically all you need is just to install the latest PostgreSQL distro.

  Despite the mentioned requirements for \"libpq\" \"hasql\" is compatible
  with a wide range of PostgreSQL servers starting from version 10.

homepage: https://github.com/nikita-volkov/hasql
bug-reports: https://github.com/nikita-volkov/hasql/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2014, Nikita Volkov
license: MIT
license-file: LICENSE
extra-source-files:
  README.md

extra-doc-files:
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/nikita-volkov/hasql

common base
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    Arrows
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    NoMonomorphismRestriction
    NumericUnderscores
    OverloadedStrings
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    -with-rtsopts=-N
    -rtsopts
    -funbox-strict-fields

common test
  import: base
  ghc-options:
    -threaded
    -with-rtsopts=-N

library
  import: base
  hs-source-dirs: src/library
  exposed-modules:
    Hasql.Connection
    Hasql.Connection.Settings
    Hasql.Decoders
    Hasql.Encoders
    Hasql.Errors
    Hasql.Pipeline
    Hasql.Session
    Hasql.Statement

  other-modules:
    Hasql.Connection.Config
    Hasql.Connection.ServerVersion

  build-depends:
    hasql:codecs,
    hasql:core,
    hasql:hipq,
    hasql:platform,
    hasql:pq,
    hasql:text-extras,
    postgresql-connection-string ^>=0.1,
    text >=1 && <3,
    text-builder >=1 && <1.1,

library codecs
  import: base
  hs-source-dirs: src/codecs
  exposed-modules:
    Codecs.Decoders
    Codecs.Decoders.Array
    Codecs.Decoders.Composite
    Codecs.Decoders.NullableOrNot
    Codecs.Decoders.Value
    Codecs.Encoders
    Codecs.Encoders.Array
    Codecs.Encoders.Composite
    Codecs.Encoders.NullableOrNot
    Codecs.Encoders.Params
    Codecs.Encoders.Value
    Codecs.TypeInfo

  build-depends:
    aeson >=2 && <3,
    bytestring >=0.10 && <0.13,
    hasql:platform,
    iproute >=1.7 && <1.8,
    postgresql-binary >=0.14.2 && <0.15,
    text-builder >=1 && <1.1,
    vector >=0.10 && <0.14,

library core
  import: base
  hs-source-dirs: src/core
  exposed-modules:
    Core.Contexts.Pipeline
    Core.Contexts.Session
    Core.Errors
    Core.Structures.ConnectionState
    Core.Structures.StatementCache

  build-depends:
    hasql:codecs,
    hasql:hipq,
    hasql:platform,
    hasql:pq,
    text-builder >=1 && <1.1,
    unordered-containers >=0.2 && <0.3,

-- Replacement of the "base" library for all the sublibs here.
-- Covers such things as Prelude and shared utils.
library platform
  import: base
  hs-source-dirs: src/platform
  exposed-modules:
    Platform.Prelude

  other-modules:
    Platform.Prelude.Text

  build-depends:
    base >=4.14 && <5,
    bytestring >=0.10 && <0.13,
    contravariant >=1.3 && <2,
    dlist >=0.8 && <0.9 || >=1 && <2,
    hashable >=1.2 && <2,
    mtl >=2 && <3,
    profunctors >=5.1 && <6,
    scientific >=0.3 && <0.4,
    text >=1 && <3,
    text-builder >=1 && <1.1,
    time >=1.9 && <2,
    transformers >=0.6 && <0.7,
    unordered-containers >=0.2 && <0.3,
    uuid >=1.3 && <2,
    vector >=0.10 && <0.14,
    witherable >=0.5 && <0.6,

-- Composable abstraction layer over patterns of using libpq with no extra responsibilities.
library hipq
  import: base
  hs-source-dirs: src/hipq
  exposed-modules:
    Hipq.Recv
    Hipq.ResultDecoder
    Hipq.Roundtrip
    Hipq.RowDecoder
    Hipq.RowReader
    Hipq.Send
    Hipq.Session

  build-depends:
    attoparsec >=0.10 && <0.15,
    bytestring >=0.10 && <0.13,
    hasql:platform,
    hasql:pq,
    vector >=0.10 && <0.14,

library pq
  import: base
  hs-source-dirs: src/pq
  exposed-modules:
    Pq

  other-modules:
    Pq.Ffi
    Pq.Mappings

  build-depends:
    base >=4.14 && <5,
    hasql:platform,
    postgresql-libpq >=0.10.1 && <0.12,

library text-extras
  import: base
  hs-source-dirs: src/text-extras
  exposed-modules:
    TextExtras

  build-depends:
    hasql:platform,
    text >=1 && <3,

benchmark benchmarks
  import: executable
  type: exitcode-stdio-1.0
  hs-source-dirs: src/benchmarks
  main-is: Main.hs
  build-depends:
    criterion >=1.6 && <2,
    hasql,
    rerebase <2,

test-suite profiling
  import: base
  type: exitcode-stdio-1.0
  hs-source-dirs: src/profiling
  main-is: Main.hs
  ghc-options:
    -O2
    -threaded
    -rtsopts

  build-depends:
    hasql,
    rerebase >=1 && <2,
    testcontainers-postgresql >=0.0.2 && <0.1,

test-suite hipq-tests
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/hipq-tests
  main-is: Main.hs
  other-modules:
    Hipq.Session.CleanUpAfterInterruptionSpec
    SpecHook

  build-tool-depends:
    hspec-discover:hspec-discover ^>=2.11.12

  build-depends:
    hasql:hipq,
    hasql:platform,
    hasql:pq,
    hspec ^>=2.11.12,
    rerebase >=1 && <2,
    testcontainers-postgresql >=0.0.1 && <0.1,
    text-builder >=1 && <1.1,

test-suite library-tests
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/library-tests
  main-is: Main.hs
  other-modules:
    Helpers.Dsls.Execution
    Helpers.Dsls.Statement
    Helpers.Scripts
    Helpers.Statements
    Helpers.Statements.BrokenSyntax
    Helpers.Statements.CurrentSetting
    Helpers.Statements.GenerateSeries
    Helpers.Statements.SelectOne
    Helpers.Statements.SelectProvidedInt8
    Helpers.Statements.SetConfig
    Helpers.Statements.Sleep
    Helpers.Statements.WrongDecoder
    Isolated.ByUnit.Connection.AcquireSpec
    Sharing.ByBug.ExceptionConnectionResetRaceSpec
    Sharing.ByFeature.ConcurrencySpec
    Sharing.ByFeature.DecoderCompatibilityCheckSpec
    Sharing.ByFeature.PreparedStatementCacheSpec
    Sharing.ByFeature.SyntaxErrorsSpec
    Sharing.ByUnit.Connection.UseSpec
    Sharing.ByUnit.PipelineSpec
    Sharing.ByUnit.Session.CatchErrorSpec
    Sharing.ByUnit.Session.ScriptSpec
    Sharing.ByUnit.Session.StatementSpec
    Sharing.ByUnit.SessionSpec
    Sharing.ByUnit.StatementSpec
    Sharing.SpecHook

  build-tool-depends:
    hspec-discover:hspec-discover ^>=2.11.12

  build-depends:
    QuickCheck,
    hasql,
    hspec ^>=2.11.12,
    quickcheck-instances >=0.3.11 && <0.4,
    random >=1.3 && <1.4,
    random ^>=1.3.1,
    rerebase >=1 && <2,
    testcontainers-postgresql >=0.0.1 && <0.1,
    text-builder >=1 && <1.1,
