cabal-version: 3.0
name: hasql
version: 1.9.3.2
category: Hasql, Database, PostgreSQL
synopsis: Fast PostgreSQL driver with a flexible mapping API
description:
  Root of the \"hasql\" ecosystem.
  This library provides connection management, execution of queries and mapping of parameters and results.
  Extended functionality such as pooling, transactions and compile-time checking of SQL is provided by extension libraries.
  For more details and tutorials see <https://github.com/nikita-volkov/hasql the readme>.

  The API comes free from all kinds of exceptions.
  All error-reporting is explicit and is presented using the 'Either' type.

  \"hasql\" requires you to have the "\libpq\" C-library of at least version 14 installed to compile.
  \"libpq\" comes distributed with PostgreSQL,
  so typically all you need is just to install the latest PostgreSQL distro.

  Despite the mentioned requirements for \"libpq\" \"hasql\" is thoroughly tested to be compatible
  with a wide range of PostgreSQL servers starting from version 10.

homepage: https://github.com/nikita-volkov/hasql
bug-reports: https://github.com/nikita-volkov/hasql/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2014, Nikita Volkov
license: MIT
license-file: LICENSE
extra-source-files:
  README.md

extra-doc-files:
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/nikita-volkov/hasql

common base
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    Arrows
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    NoMonomorphismRestriction
    NumericUnderscores
    OverloadedStrings
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    -with-rtsopts=-N
    -rtsopts
    -funbox-strict-fields

common test
  import: base
  ghc-options:
    -threaded
    -with-rtsopts=-N

library
  import: base
  hs-source-dirs: src/library
  exposed-modules:
    Hasql.Connection
    Hasql.Connection.Settings
    Hasql.Decoders
    Hasql.Encoders
    Hasql.Errors
    Hasql.Pipeline
    Hasql.Session
    Hasql.Statement

  other-modules:
    Hasql.Codecs.Decoders
    Hasql.Codecs.Decoders.Array
    Hasql.Codecs.Decoders.Composite
    Hasql.Codecs.Decoders.NullableOrNot
    Hasql.Codecs.Decoders.Value
    Hasql.Codecs.Encoders
    Hasql.Codecs.Encoders.Array
    Hasql.Codecs.Encoders.Composite
    Hasql.Codecs.Encoders.NullableOrNot
    Hasql.Codecs.Encoders.Params
    Hasql.Codecs.Encoders.Value
    Hasql.Codecs.RequestingOid
    Hasql.Codecs.RequestingOid.LookingUp
    Hasql.Codecs.TypeInfo
    Hasql.Comms.Recv
    Hasql.Comms.ResultDecoder
    Hasql.Comms.Roundtrip
    Hasql.Comms.RowDecoder
    Hasql.Comms.RowReader
    Hasql.Comms.Send
    Hasql.Comms.Session
    Hasql.Connection.Config
    Hasql.Connection.ServerVersion
    Hasql.Engine.Contexts.Pipeline
    Hasql.Engine.Contexts.Session
    Hasql.Engine.Decoders.Result
    Hasql.Engine.Decoders.Row
    Hasql.Engine.Errors
    Hasql.Engine.PqProcedures.SelectTypeInfo
    Hasql.Engine.Structures.ConnectionState
    Hasql.Engine.Structures.OidCache
    Hasql.Engine.Structures.StatementCache
    Hasql.Errors.TextExtras
    Hasql.Platform.Prelude
    Hasql.Platform.Prelude.Text
    Hasql.Pq
    Hasql.Pq.Ffi
    Hasql.Pq.Mappings

  build-depends:
    aeson >=2 && <3,
    attoparsec >=0.10 && <0.15,
    base >=4.14 && <5,
    bytestring >=0.10 && <0.13,
    bytestring-strict-builder >=0.4.5.4 && <0.5,
    contravariant >=1.3 && <2,
    dlist >=0.8 && <0.9 || >=1 && <2,
    hashable >=1.2 && <2,
    iproute >=1.7 && <1.8,
    mtl >=2 && <3,
    postgresql-binary ^>=0.15,
    postgresql-connection-string ^>=0.1,
    postgresql-libpq >=0.10.1 && <0.12,
    profunctors >=5.1 && <6,
    scientific >=0.3 && <0.4,
    text >=1 && <3,
    text-builder >=1 && <1.1,
    time >=1.9 && <2,
    transformers >=0.6 && <0.7,
    unordered-containers >=0.2 && <0.3,
    uuid >=1.3 && <2,
    vector >=0.10 && <0.14,
    witherable >=0.5 && <0.6,

benchmark benchmarks
  import: executable
  type: exitcode-stdio-1.0
  hs-source-dirs: src/benchmarks
  main-is: Main.hs
  build-depends:
    criterion >=1.6 && <2,
    hasql,
    rerebase <2,

test-suite profiling
  import: base
  type: exitcode-stdio-1.0
  hs-source-dirs: src/profiling
  main-is: Main.hs
  ghc-options:
    -O2
    -threaded
    -rtsopts

  build-depends:
    hasql,
    rerebase >=1 && <2,
    testcontainers-postgresql ^>=0.2,

test-suite comms-tests
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs:
    src/comms-tests
    src/library

  main-is: Main.hs
  other-modules:
    Hasql.Comms.Recv
    Hasql.Comms.ResultDecoder
    Hasql.Comms.Roundtrip
    Hasql.Comms.RowDecoder
    Hasql.Comms.RowReader
    Hasql.Comms.Send
    Hasql.Comms.Session
    Hasql.Comms.Session.CleanUpAfterInterruptionSpec
    Hasql.Comms.SpecHook
    Hasql.Platform.Prelude
    Hasql.Platform.Prelude.Text
    Hasql.Pq
    Hasql.Pq.Ffi
    Hasql.Pq.Mappings

  build-tool-depends:
    hspec-discover:hspec-discover ^>=2.11.12

  build-depends:
    attoparsec >=0.10 && <0.15,
    base >=4.14 && <5,
    bytestring >=0.10 && <0.13,
    contravariant >=1.3 && <2,
    dlist >=0.8 && <0.9 || >=1 && <2,
    hashable >=1.2 && <2,
    hspec ^>=2.11.12,
    mtl >=2 && <3,
    postgresql-libpq >=0.10.1 && <0.12,
    profunctors >=5.1 && <6,
    scientific >=0.3 && <0.4,
    testcontainers-postgresql ^>=0.2,
    text >=1 && <3,
    text-builder >=1 && <1.1,
    time >=1.9 && <2,
    transformers >=0.6 && <0.7,
    unordered-containers >=0.2 && <0.3,
    uuid >=1.3 && <2,
    vector >=0.10 && <0.14,
    witherable >=0.5 && <0.6,

test-suite library-tests
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/library-tests
  main-is: Main.hs
  other-modules:
    Helpers.Dsls.Execution
    Helpers.Dsls.Statement
    Helpers.Scripts
    Helpers.Statements
    Helpers.Statements.BrokenSyntax
    Helpers.Statements.CountPreparedStatements
    Helpers.Statements.CurrentSetting
    Helpers.Statements.GenerateSeries
    Helpers.Statements.SelectOne
    Helpers.Statements.SelectProvidedInt8
    Helpers.Statements.SetConfig
    Helpers.Statements.Sleep
    Helpers.Statements.WrongDecoder
    Isolated.ByUnit.Connection.AcquireSpec
    Sharing.ByBug.ExceptionConnectionResetRaceSpec
    Sharing.ByFeature.ConcurrencySpec
    Sharing.ByFeature.DecoderCompatibilityCheckSpec
    Sharing.ByFeature.PreparedStatementCacheSpec
    Sharing.ByFeature.PreparedStatementsSpec
    Sharing.ByFeature.SyntaxErrorsSpec
    Sharing.ByUnit.Connection.UseSpec
    Sharing.ByUnit.Decoders.Composite.OidMismatchSpec
    Sharing.ByUnit.Decoders.CompositeSpec
    Sharing.ByUnit.Decoders.DomainSpec
    Sharing.ByUnit.Decoders.EnumSpec
    Sharing.ByUnit.Decoders.Float8Spec
    Sharing.ByUnit.Decoders.HstoreSpec
    Sharing.ByUnit.Decoders.InetSpec
    Sharing.ByUnit.Decoders.IntervalSpec
    Sharing.ByUnit.Decoders.JsonSpec
    Sharing.ByUnit.Decoders.RecordSpec
    Sharing.ByUnit.Decoders.UuidSpec
    Sharing.ByUnit.Encoders.ArraySpec
    Sharing.ByUnit.Encoders.Composite.OidMismatchSpec
    Sharing.ByUnit.Encoders.CompositeSpec
    Sharing.ByUnit.Encoders.DomainSpec
    Sharing.ByUnit.Encoders.EnumSpec
    Sharing.ByUnit.Encoders.InetSpec
    Sharing.ByUnit.Encoders.IntervalSpec
    Sharing.ByUnit.Encoders.JsonSpec
    Sharing.ByUnit.Encoders.UnknownSpec
    Sharing.ByUnit.Encoders.UuidSpec
    Sharing.ByUnit.PipelineSpec
    Sharing.ByUnit.Session.CatchErrorSpec
    Sharing.ByUnit.Session.ScriptSpec
    Sharing.ByUnit.Session.StatementSpec
    Sharing.ByUnit.SessionSpec
    Sharing.ByUnit.StatementSpec
    Sharing.SpecHook

  build-tool-depends:
    hspec-discover:hspec-discover ^>=2.11.12

  build-depends:
    QuickCheck,
    aeson,
    hasql,
    hspec ^>=2.11.12,
    iproute,
    quickcheck-instances >=0.3.11 && <0.4,
    random >=1.3 && <1.4,
    random ^>=1.3.1,
    rerebase >=1 && <2,
    testcontainers-postgresql ^>=0.2,
    text-builder >=1 && <1.1,
