name:
  high-sql
version:
  0.1.0
synopsis:
description:
category:
homepage:
  https://github.com/nikita-volkov/high-sql 
bug-reports:
  https://github.com/nikita-volkov/high-sql/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2014, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/high-sql.git


library
  hs-source-dirs:
    library
  other-modules:
    HighSQL.Prelude
    HighSQL.Statement.QQ.Parser
  exposed-modules:
    HighSQL
    HighSQL.Backend
  build-depends:
    -- parsing:
    attoparsec == 0.11.*,
    -- database:
    ex-pool == 0.2.*,
    -- data:
    unordered-containers == 0.2.*,
    bytestring == 0.10.*,
    text == 0.11.*,
    hashable == 1.2.*,
    -- errors:
    loch-th == 0.2.*,
    placeholders == 0.1.*,
    -- general:
    mtl-prelude == 0.1.*,
    base-prelude >= 0.1.3 && < 0.2
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
