name:
  high-sql
version:
  0.1.0
synopsis:
  A general high level and high quality API for relational databases
description:
category:
  Database
homepage:
  https://github.com/nikita-volkov/high-sql 
bug-reports:
  https://github.com/nikita-volkov/high-sql/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2014, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/high-sql.git


library
  hs-source-dirs:
    library
  other-modules:
    HighSQL.Prelude
    HighSQL.CompositionT
    HighSQL.QQ
    HighSQL.QQ.Parser
    HighSQL.API
    HighSQL.Conversion
  exposed-modules:
    HighSQL
    HighSQL.Backend
  build-depends:
    -- template-haskell:
    template-haskell >= 2.8 && < 2.10,
    -- parsing:
    attoparsec == 0.12.*,
    -- database:
    ex-pool == 0.2.*,
    -- data:
    Decimal == 0.4.*,
    time == 1.4.*,
    bytestring == 0.10.*,
    text == 1.1.*,
    hashable == 1.2.*,
    -- control:
    list-t >= 0.2.1 && < 0.3,
    mmorph == 1.0.*,
    monad-control == 0.3.*,
    transformers-base == 0.4.*,
    -- errors:
    loch-th == 0.2.*,
    placeholders == 0.1.*,
    -- general:
    mtl-prelude == 0.1.*,
    base-prelude >= 0.1.3 && < 0.2
  ghc-options:
    -funbox-strict-fields
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
