name:
  high-sql
version:
  0.1.0
synopsis:
  A minimalistic general high level API for relational databases
description:
category:
  Database
homepage:
  https://github.com/nikita-volkov/high-sql 
bug-reports:
  https://github.com/nikita-volkov/high-sql/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2014, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/high-sql.git


library
  hs-source-dirs:
    library
  other-modules:
    HighSQL.Prelude
    HighSQL.QQ.Parser
    HighSQL.QQ
    HighSQL.RowParser
    HighSQL.Transaction
    HighSQL.Pool
  exposed-modules:
    HighSQL.Backend
    HighSQL
  build-depends:
    -- template-haskell:
    template-haskell >= 2.8 && < 2.10,
    -- parsing:
    attoparsec == 0.12.*,
    -- database:
    ex-pool == 0.2.*,
    -- data:
    time >= 1.4 && < 1.6,
    bytestring == 0.10.*,
    text >= 1.1 && < 1.3,
    hashable == 1.2.*,
    -- control:
    list-t >= 0.2.4 && < 0.3,
    monad-control == 0.3.*,
    transformers-base == 0.4.*,
    -- errors:
    loch-th == 0.2.*,
    placeholders == 0.1.*,
    -- general:
    safe >= 0.3.8 && < 0.4,
    mmorph == 1.0.*,
    mtl-prelude == 0.1.*,
    base-prelude >= 0.1.3 && < 0.2,
    base >= 4.5 && < 4.8
  ghc-options:
    -funbox-strict-fields
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
