cabal-version: 3.0
name: template-haskell-compat-v0208
version: 0.1.9.5
category: TemplateHaskell, Compatibility
synopsis:
  Backward-compatibility layer for Template Haskell newer than 2.8

description:
  Collection of functions that aims to help you to write
  Template Haskell that is compatible
  with all versions of GHC starting from 7.6.
  The oldest GHC serves as the common denominator here,
  so the newer functionality is avoided here.

homepage:
  https://github.com/nikita-volkov/template-haskell-compat-v0208

bug-reports:
  https://github.com/nikita-volkov/template-haskell-compat-v0208/issues

author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2016, Nikita Volkov
license: MIT
license-file: LICENSE

source-repository head
  type: git
  location:
    git://github.com/nikita-volkov/template-haskell-compat-v0208.git

library
  hs-source-dirs: library
  default-extensions:
    Arrows
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    ParallelListComp
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeFamilies
    TypeOperators
    UnboxedTuples

  default-language: Haskell2010
  exposed-modules: TemplateHaskell.Compat.V0208
  other-modules: TemplateHaskell.Compat.V0208.Prelude
  build-depends:
    base >=4.6 && <5,
    template-haskell >=2.8 && <2.24,
